src/test/ui/wf/wf-object-safe.stderr
error[E0038]: the trait `A` cannot be made into an object
  --> $DIR/wf-object-safe.rs:9:13
   |
LL |     let _x: &dyn A;
   |             ^^^^^^ `A` cannot be made into an object
   |
   = help: consider moving `foo` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/wf-object-safe.rs:5:23
   |
LL | trait A {
   |       - this trait cannot be made into an object...
LL |     fn foo(&self, _x: &Self);
   |                       ^^^^^ ...because method `foo` references the `Self` type in this parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
